# rswiki-wrapper

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  sample.py
docs/source/: api.rst  conf.py  endpoints.rst  index.rst  usage.rst
rswiki_wrapper/: __init__.py  osrs.py  wiki.py
tests/: test_osrs.py  test_wiki.py
wikiwrapper/: __init__.py  osrs.py  wiki.py
